Fixed spacing on hobbies section and cleaned up css file

--- a/app/static/styles/main.css
+++ b/app/static/styles/main.css
@@ -12,12 +12,6 @@ body {
     margin: 0px;
 }
 
-.section {
-    overflow:auto;
-    height: auto;
-    letter-spacing: 1px;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -30,17 +24,10 @@ body, html {
     position: relative;
 }
 
-.centered {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-.vertical-middle {
-    display: flex;
-    align-items: center;
+.section {
+    overflow:auto;
+    height: auto;
+    letter-spacing: 1px;
 }
 
 .parallax {
@@ -50,6 +37,19 @@ body, html {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.centered {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.vertical-middle {
+    display: flex;
+    align-items: center;
 }
 
 /* More About Me Button */
@@ -101,167 +101,12 @@ img {
     vertical-align: middle;
 }
 
-.down-button {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 20%;
-}  
-
-.profile {
-    background-color: #1d539f !important;
-    text-align: center;
-    height: 320px;
-    margin-bottom: 50px;
-}
-
-.profile h1 {
-        font-size: 50px;
-        font-weight: 700;
-        color: white;
-}
-
-.profile img {
-        border-radius: 50%;
-        max-width: 100%;
-        max-height: 100%;
-        margin-left: auto;
-        margin-right: auto;
-        display: block;        
-        padding: 20px;
-}
-
-.profile .profile-picture {
-    margin-bottom: 30px;
-    height: 200px;
-}
-
-.banner {
-    padding: 20px 0px 50px 0px;
-    height: 150px;
-    background-color: #1d539f;
-}
-
-.banner .logo {
-    max-width:180px;
-    max-height:60px;
-    width: auto;
-    height: auto;
-}
-
-.banner .title {
-    color: white;
-    font-size: 50px;
-    font-weight: 700;
-}
-
-/* WORK EXPERIENCES & HOBBIES */ 
-/* Source: https://www.w3schools.com/howto/howto_js_quotes_slideshow.asp*/
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
-    color: white;
-}
-
-/* Additional stuff for hobbies slideshow*/
-/* Fading animation */
-.fade {
-    opacity: 1;
-    animation-name: fade;
-    animation-duration: 1.5s;
-}
-  
-@keyframes fade {
-    from {opacity: .4} 
-    to {opacity: 1}
-}
-
-.hobbies {
-    /*display: inline-block;
-    margin-left: auto;
-    margin-right: auto;
-    margin: 20px 20px 20px 20px;*/
-    height: 250px;
-    opacity: 0.4;
-    filter: sepia(100%) saturate(300%) brightness(60%) hue-rotate(150deg);
-}
-
-/* [1] The container */
-.img-hover-zoom {
-    height: 250px; /* [1.1] Set it as per your need */
-    width: 390px;
-    overflow: hidden; /* [1.2] Hide the overflowing of child elements */
-  }
-  
-  /* [2] Transition property for smooth transformation of images */
-  .img-hover-zoom img {
-    transition: transform .5s ease;
-  }
-  
-  /* [3] Finally, transforming the image when container gets hovered */
-  .img-hover-zoom:hover img {
-    transform: scale(1.5);
-  }
-
-/* Photo of yourself */
-#bigimg {
-    width: 100%;
-    background-size: cover !important;
-    margin: 0px auto;
-    overflow: hidden !important;
-    background: url('../img/otters.jpg');
-    margin-top: -1px !important;
-}
-
+/* Profile picture */
 .rounded-img {
     width: 300px;
     border-radius: 200px;
     margin: 0 50px 0 0;
 }
-
-.imgfade{
-    display:none;
-}
-
-.animated {
-    background-repeat: no-repeat;
-    background-position: left top;
-    animation-duration: 2s;
-    -webkit-animation-fill-mode: both;
-    animation-fill-mode: both;
-}
-
-@-webkit-keyframes fadeInDown {
-    0% {
-        opacity: 0;
-        -webkit-transform: translateY(-20px);
-    }
-
-    100% {
-        opacity: 1;
-        -webkit-transform: translateY(0);
-    }
-}
-
-@keyframes fadeInDown {
-    0% {
-        opacity: 0;
-        transform: translateY(-20px);
-    }
-
-    100% {
-        opacity: 1;
-        transform: translateY(0);
-    }
-}
-
-.fadeInDown {
-    -webkit-animation-name: fadeInDown;
-    animation-name: fadeInDown;
-    display:block !important;
-}
-
 
 /* Map */
 #maparea { 
@@ -270,7 +115,7 @@ img {
     margin: auto;
 }
 
-/* Contact */
+/* Contact icons */
 .contact {
     margin: auto;
     text-align: center;
@@ -296,43 +141,43 @@ img {
 }
 
 .sidenav {
-  height: auto;
-  width: 0;
-  position: fixed;
-  z-index: 9999;
-  top: 0;
-  left: 0;
-  background-color: #111;
-  overflow-x: hidden;
-  transition: 0.5s;
-  padding-top: 50px;
-  border-radius: 0 5px 5px 5px;
+    height: auto;
+    width: 0;
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    left: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 50px;
+    border-radius: 0 5px 5px 5px;
 }
 
 .sidenav a {
-  padding: 8px 23px 20px 23px;
-  text-decoration: none;
-  font-size: 18px;
-  color: #818181;
-  display: block;
-  transition: 0.3s;
+    padding: 8px 23px 20px 23px;
+    text-decoration: none;
+    font-size: 18px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
 }
 
 .sidenav a:hover {
-  color: #f1f1f1;
+    color: #f1f1f1;
 }
 
 .sidenav .closebtn {
-  position: absolute;
-  top: 0;
-  right: 0;
-  font-size: 30px;
-  margin-left: 50px;
+    position: absolute;
+    top: 0;
+    right: 0;
+    font-size: 30px;
+    margin-left: 50px;
 }
 
 @media screen and (max-height: 450px) {
-  .sidenav {padding-top: 15px;}
-  .sidenav a {font-size: 18px;}
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
 }
   
 .row {
@@ -341,3 +186,24 @@ img {
 .col {
     flex: 1;
 }  
+
+/* Hobbies */
+.hobbies {
+    height: 250px;
+    opacity: 0.4;
+    filter: sepia(100%) saturate(300%) brightness(60%) hue-rotate(150deg);
+}
+
+.img-hover-zoom {
+    height: 250px; 
+    width: 390px;
+    overflow: hidden; 
+}
+
+.img-hover-zoom img {
+    transition: transform .5s ease;
+}
+
+.img-hover-zoom:hover img {
+    transform: scale(1.5);
+}
